--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -72,13 +72,38 @@
   .mode-academico body {
     transition: background-color 0.5s ease-in-out;
   }
-  
-  .mode-academico body {
-    @apply bg-cm-academic-bg;
-  }
 
+  /* Estilos de texto */
   h1, h2, h3, h4, h5, h6 {
     @apply font-bebas;
+  }
+
+  h1 {
+    @apply text-5xl md:text-6xl lg:text-7xl mb-8 font-bold leading-tight;
+  }
+
+  h2 {
+    @apply text-5xl mb-8 tracking-wide;
+  }
+
+  h3 {
+    @apply text-4xl mb-6 tracking-wide;
+  }
+
+  h4 {
+    @apply text-2xl mb-2 tracking-wider;
+  }
+
+  p {
+    @apply font-dmsans text-lg text-gray-600 mb-6 leading-relaxed;
+  }
+
+  .bigtext {
+    @apply text-xl md:text-2xl lg:text-3xl text-gray-700 max-w-2xl mb-10;
+  }
+
+  .smalltext {
+    @apply text-base mb-4;
   }
 
   /* Virtual bookshelf specific styles */
@@ -102,20 +127,25 @@
 }
 
 @layer components {
-  .cm-btn {
-    @apply px-4 py-2 rounded-2xl font-medium transition-colors;
+
+  .btn {
+    @apply inline-flex items-center justify-center gap-2 whitespace-nowrap ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 h-10 bg-cm-purple hover:bg-cm-purple/70 text-cm-bg rounded-2xl
   }
   
-  .cm-btn-primary {
-    @apply cm-btn bg-cm-red text-white hover:bg-opacity-90;
+  .primary-btn {
+    @apply btn px-7 py-5 text-base md:text-lg font-semibold;
   }
-  
-  .cm-btn-secondary {
-    @apply cm-btn bg-cm-purple text-white hover:bg-opacity-90;
+
+  .primary-btn-academic {
+    @apply primary-btn bg-cm-academic hover:bg-cm-academic/70;
   }
-  
-  .cm-card {
-    @apply bg-white rounded-2xl p-6 shadow-md;
+
+  .big-btn {
+    @apply btn px-10 py-5 text-xl md:text-2xl font-bold shadow-lg;
+  }
+
+  .wide-btn {
+    @apply primary-btn rounded-xl w-full;
   }
 }
 
