Ajustes na navbar

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -122,14 +122,14 @@
   }
   
   .primary-btn {
-    @apply btn bg-library-purple text-default-bg px-7 py-5 text-base md:text-lg;
+    @apply btn bg-library-purple text-white px-7 py-5 text-base md:text-lg;
   }
 
   .primary-btn-academic {
-    @apply btn bg-academic-blue   text-default-bg px-7 py-5 ;
+    @apply btn bg-academic-blue   text-white px-7 py-5 ;
   }
 
   .wide-btn {
-    @apply btn text-default-bg rounded-xl w-full;
+    @apply btn text-white rounded-xl w-full;
   }
 }
